tests/rosetta/out/Smalltalk/averages-median-3.out
/tmp/averages-median-3.st:5: parse error, expected ']'
